fixed screen overflow

--- a/src/calculator.scss
+++ b/src/calculator.scss
@@ -26,7 +26,7 @@
 
   .calculator-screen-wrapper {
     width: 100%;
-    height: 70px;
+    min-height: 70px;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -41,6 +41,7 @@
       color: #262626;
       font-size: 16px;
       letter-spacing: 1.5px;
+      word-break: break-all !important;
     }
 
     .calculator-final-answer {
